add r igraph and r polyclip
igraph required for ggraph needed for ggtree, needed for clusterProfiler
polyclip required for ggraph

--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -28,6 +28,8 @@ dependencies:
   - r-factominer
   - r-factoextra
   - r-dt
+  - r-igraph
+  - r-polyclip
   # JupyterLab Variable inspector
   # https://github.com/lckr/jupyterlab-variableInspector
   - r-repr
