--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -32,5 +32,5 @@ dependencies:
   # https://github.com/lckr/jupyterlab-variableInspector
   - r-repr
   - pip:
-    - lckr-jupyterlab-variableinspector
+  # - lckr-jupyterlab-variableinspector
     - matplotlib
